--- a/views/validation.ejs
+++ b/views/validation.ejs
@@ -16,7 +16,15 @@
         <div id="persons">
             <h3>Liste des passagers</h3>
             <ul>
-
+                <li> 
+                    <span> Destination : </span> <br \>
+                </li>
+                <li>
+                    <span>Nom : </span> <br \>
+                </li>
+                <li>
+                    <span>Age : </span> <br \>
+                </li>
             </ul>
         </div>
         <form>
