--- a/views/confirmation.ejs
+++ b/views/confirmation.ejs
@@ -9,7 +9,8 @@
     <div id="confirmation">
         <h3>Votre réservation a bien enregistrée</h3>
         <h3>EcamAir vous souhaite un bon voyage</h3>
-        <img src="soleil.jpg" alt="soleil couchant">
+        <img src="public/soleil.jpg" alt="soleil couchant">
+        <a href="/"> Retour à la page d'accueil </a>
     </div>
 </body>
 </html>
